--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "click-and-react",
   "version": "0.1.0",
-  "homepage": "https://github.com/HaroldBernard/click-and-react",
+  "homepage": "https://HaroldBernard.github.io/click-and-react",
   "private": true,
   "dependencies": {
     "gh-pages": "^2.0.1",
